# GENECI

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  EAGRN-Inference.py  FUN.csv  LICENSE  Makefile  README.md  VAR.csv  compare_fronts.py  csvs2latex.py  eval.ipynb  extract_data.sh  filter_points.py  generate_images.sh  get_reference_point.py  hola.sh  infer_networks.sh  main_script.sh  meme.sh  pyproject.toml  tfm.sh
.github/workflows/: ci.yml  release.yml  sync_repo.yml
EAGRN-JMetal/: pom.xml
components/apply_cut/: Dockerfile  README.md
components/cluster_network/: Dockerfile  README.md  cluster_network.py
components/draw_network/: Dockerfile  README.md  draw_network.py  my_d3graph.py
components/dream4_measures/: Dockerfile  README.md  go.m
components/extract_data/: Dockerfile  README.md  extract_data.R
components/infer_network/: functions.R
components/optimize_ensemble/: Dockerfile  README.md
components/weighted_confidence/: Dockerfile  README.md
docs/: Parameterization.md
docs/parameterization/: parameterization.md
docs/statistical_significance/: AUPR_0-25_final.csv  AUPR_0-25_final.tex  AUPR_110-250_final.csv  AUPR_110-250_final.tex  AUPR_2000_final.csv  AUPR_2000_final.tex  AUPR_25-110_final.csv  AUPR_25-110_final.tex  AUPR_250-2000_final.csv  AUPR_250-2000_final.tex  AUROC_0-25_final.csv  AUROC_0-25_final.tex  AUROC_110-250_final.csv  AUROC_110-250_final.tex  AUROC_2000_final.csv  AUROC_2000_final.tex  AUROC_25-110_final.csv  AUROC_25-110_final.tex  AUROC_250-2000_final.csv  AUROC_250-2000_final.tex  Mean_0-25_final.csv  Mean_0-25_final.tex  Mean_110-250_final.csv  Mean_110-250_final.tex  Mean_2000_final.csv  Mean_2000_final.tex  Mean_25-110_final.csv  Mean_25-110_final.tex  Mean_250-2000_final.csv  Mean_250-2000_final.tex  all_networks_0-25_final_scores.csv  all_networks_110-250_final_scores.csv  all_networks_2000_final_scores.csv  all_networks_25-110_final_scores.csv  all_networks_250-2000_final_scores.csv
evaluate/: evaluate.R  evaluate.py  evaluate_techniques.sh
evaluate/matlab/: dream4-eval.sh  go_all.m
examples/: input.csv
examples/output_folder/: gene_names.txt
extract_data/: DREAM4.R  GeneNetWeaver.R  Rogers.R  SynTReN.R  extract_data.sh
geneci/: chord_diagram.py  main-old.py  main.py  utils.py
plot_fitness/: plot_fitness.py
techniques/: ARACNE.R  BC3NET.R  C3NET.R  CLR.R  GENIE3.R  GENIE3.py  InferNetworks.sh  MRNET.R  MRNETB.R  PCIT.R  infer_networks.sh
techniques/functions/: functions.R
tmp/: gene_names.txt
tmp/lists/: GRN_ARACNE.csv  GRN_BC3NET.csv  GRN_C3NET.csv  GRN_CLR.csv  GRN_GENIE3_ET.csv  GRN_GENIE3_GBM.csv  GRN_GENIE3_RF.csv  GRN_KBOOST.csv  GRN_MRNET.csv  GRN_MRNETB.csv  GRN_PCIT.csv  GRN_TIGRESS.csv
utils/: 01_get_template.sh  02_compare_techniques.sh  03_compare_fitness_functions.sh  04_compare_functions_and_techniques.sh  05_execute_multi_objective.sh  06_modular_inference.py  barplot.R  bayesian-fusion.py  check_num_files.sh  compare_fronts.py  delete_duplicate_times.sh  execute_multi_objective.sh  filter_points.py  join_scores.py  latex.py  lines.R  median.py  paste.pl  radar.R  rank-average.py  wilcox.py
(+1404 files in other folders)
